demoProject/convert/objects/Training_Class__c.object
<CustomObject>
    <label>Training Class</label>
    <nameField>
        <label>Training Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Array_Format__c</fullName>
        <formula>Name &amp; &quot;|&quot; &amp; Text( Training_Course__r.Training_Category__c ) &amp; &quot;|&quot; &amp; Text( Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Array Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training_Course__c</fullName>
        <label>Training Course</label>
        <referenceTo>Training_Course__c</referenceTo>
        <relationshipLabel>Training Classes</relationshipLabel>
        <relationshipName>Training_Classes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>